--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 </body>
 <script>
-  const scriptURL = 'PASTE_YOUR_WEB_APP_URL_HERE';
+  const scriptURL = 'https://script.google.com/macros/s/AKfycbygnmv7EVttAs1Qn9ngp70Tf9afWVaN701wGO-JAhTfEPXHTAMm0sNxztdjSQznlIv4sQ/exec';
 
   // Client
   const clientForm = document.getElementById('clientForm');
